<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/paddingStart"
        android:layout_weight="0.2">
        <TextView
            android:id="@+id/tName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_serie"/>
        <TextView
            android:id="@+id/tReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reps"/>
        <TextView
            android:id="@+id/tWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:mipmap/sym_def_app_icon"/>
    </LinearLayout>
</LinearLayout>