<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.juliodebuen.excercise.ExercisesActivity"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.75">
        <Spinner
                android:id="@+id/sDia"
                android:layout_width="match_parent"
                android:layout_height="40dp">
        </Spinner>


        <EditText
                android:id="@+id/eDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_excercise"
                    android:layout_weight="0.5"
                    android:paddingStart="@dimen/paddingButton"
                    android:paddingEnd="@dimen/paddingButton"/>
            <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_routine"
                    android:layout_weight="0.5"
                    android:paddingStart="@dimen/paddingButton"
                    android:paddingEnd="@dimen/paddingButton"/>
        </LinearLayout>

    </LinearLayout>

    <ListView
            android:id="@+id/lvRoutine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            tools:listitem="@layout/listview_excercise">
    </ListView>
</LinearLayout>
